@@ -189,7 +189,6 @@ case RESCHEDULE_VECTOR - FIRST_EXTERNAL_VECTOR:
 #define XNARCH_NR_CPUS               RTHAL_NR_CPUS
 
 #define XNARCH_DEFAULT_TICK          1000000 /* ns, i.e. 1ms */
-#define XNARCH_IRQ_MAX               IPIPE_NR_XIRQS /* Do _not_ use NR_IRQS here. */
 #ifdef CONFIG_X86_LOCAL_APIC
 /* When the local APIC is enabled, we do not need to relay the host
    tick since 8254 interrupts are already flowing normally to Linux
@@ -362,56 +361,42 @@ static inline int xnarch_hook_irq (unsigned irq,
 						   void *cookie),
 				   void *cookie)
 {
-    int err = rthal_request_irq(irq,handler,cookie);
-
-    if (!err)
-	rthal_enable_irq(irq);
-
-    return err;
+    return rthal_request_irq(irq,handler,cookie);
 }
 
-static inline int xnarch_release_irq (unsigned irq) {
+static inline int xnarch_release_irq (unsigned irq)
 
+{
     return rthal_release_irq(irq);
 }
 
 static inline int xnarch_enable_irq (unsigned irq)
 
 {
-    if (irq >= XNARCH_IRQ_MAX)
-	return -EINVAL;
-
-    rthal_enable_irq(irq);
-
-    return 0;
+    return rthal_enable_irq(irq);
 }
 
 static inline int xnarch_disable_irq (unsigned irq)
 
 {
-    if (irq >= XNARCH_IRQ_MAX)
-	return -EINVAL;
-
-    rthal_disable_irq(irq);
-
-    return 0;
+    return rthal_disable_irq(irq);
 }
 
-static inline void xnarch_isr_chain_irq (unsigned irq) {
+static inline void xnarch_chain_irq (unsigned irq)
+
+{
     rthal_pend_linux_irq(irq);
 }
 
-static inline void xnarch_isr_enable_irq (unsigned irq) {
-    rthal_enable_irq(irq);
-}
+static inline void xnarch_relay_tick (void)
 
-static inline void xnarch_relay_tick (void) {
-
+{
     rthal_pend_linux_irq(RTHAL_8254_IRQ);
 }
 
 static inline cpumask_t xnarch_set_irq_affinity (unsigned irq,
-                                                 xnarch_cpumask_t affinity) {
+                                                 xnarch_cpumask_t affinity)
+{
     return adeos_set_irq_affinity(irq,affinity);
 }
 
