@@ -362,8 +362,8 @@ void mvm_tcl_build_pendq(mvm_tcl_listobj_t *tclist,
 static inline int xnarch_hook_irq (unsigned irq,
 				   void (*handler)(unsigned irq,
 						   void *cookie),
-				   void *cookie) {
-
+				   void *cookie)
+{
     return mvm_hook_irq(irq,handler,cookie);
 }
 
@@ -382,16 +382,13 @@ static inline int xnarch_disable_irq (unsigned irq) {
     return mvm_disable_irq(irq);
 }
 
-static inline void xnarch_isr_chain_irq (unsigned irq) {
-    /* Nop */
-}
+static inline void xnarch_chain_irq (unsigned irq)
 
-static inline void xnarch_isr_enable_irq (unsigned irq) {
-    /* Nop */
-}
+{ /* Nop */ }
 
 static inline unsigned long xnarch_set_irq_affinity (unsigned irq,
-						     unsigned long affinity) {
+						     unsigned long affinity)
+{
     return 0;
 }
 
